2024-11-09T01:40:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11752188097 # 474
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-09
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 975 1730 / 979 1734
* notice: next accum: outdated-unq outdated-all / unq all: 976 1731 / 979 1734
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-26] / []

2024-11-04T01:47:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11656696638 # 469
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-04
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 972 1727 / 978 1733
* notice: next accum: outdated-unq outdated-all / unq all: 975 1730 / 979 1734
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-20] / [2024-11-03]

2024-10-30T01:45:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11585470741 # 464
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-30
* notice: last 14d: unq all: 6 6
* notice: prev accum: outdated-unq outdated-all / unq all: 971 1726 / 977 1732
* notice: next accum: outdated-unq outdated-all / unq all: 972 1727 / 978 1733
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-16] / [2024-10-30]

2024-10-29T01:46:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11565770542 # 463