@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-09T01:40:03Z",
+  "timestamp" : "2024-11-11T01:45:07Z",
   "count_outdated" : 1731,
   "uniques_outdated" : 976,
-  "count" : 1734,
-  "uniques" : 979,
+  "count" : 1735,
+  "uniques" : 980,
   "clones" : [
     {
       "timestamp": "2024-10-28T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2024-11-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-11-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
