@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-10-28T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2024-11-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-11-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
